@@ -1,3 +1,8 @@
+2013-08-06  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/57306
+	* gfortran.dg/pointer_init_8.f90: New.
+
 2013-08-05  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58080
